--- a/src/assets/constants.scss
+++ b/src/assets/constants.scss
@@ -1,1 +1,3 @@
-$footerGradient : linear-gradient(to right, #c6c6c6 0%, #969696 100%);
+$footerGradient: linear-gradient(to right, #c6c6c6 0%, #969696 100%);
+$primaryDark: #3634d2;
+$primary: #5755d9;
