added login popover to header

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -21,8 +21,33 @@
     <div class="column  no-grow">
       <div class="table">
         <div class="cell-wrapper">
-          
-          <button type='button' class="btn btn-primary right "> Login </button>
+          <div class="popover popover-bottom">
+            <button type='button' class="btn btn-primary right "> Login </button>
+            <div class="popover-container">
+              <div class="card">
+                <div class="card-body">
+                  <ul class="menu">
+                      <li class="divider" data-content="Login via"></li>                    <li class="menu-item login-entry">
+                      <a href="" class="">
+                        <i class="fab fa-facebook-square"></i>
+                        Log in with Facebook
+                      </a>
+                    </li>
+                    <li class="menu-item login-entry">
+                      <a href="" class="">
+                        <i class="fab fa-google"></i>
+                        Log in with Google
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <!-- <div class="card-footer">
+                  ...
+                </div> -->
+              </div>
+            </div>
+            </div>
+
         </div>
       </div>
     </div>
