--- a/src/app/shared/components/image-list/image-list.component.scss
+++ b/src/app/shared/components/image-list/image-list.component.scss
@@ -1,10 +1,9 @@
 @import "../../../../assets/constants.scss";
-
 .arrow {
     color: rgb(78, 78, 78);
     font-size: 5rem;
-    &:hover{
-      color: $primary;
+    &:hover {
+        color: $primary;
     }
 }
 
@@ -12,7 +11,6 @@ $border: 2px solid gray;
 .line {
     overflow-y: hidden;
     overflow-x: auto;
-
     height: 4rem;
     margin-bottom: 1rem;
     display: block;
@@ -40,6 +38,8 @@ $border: 2px solid gray;
 }
 
 .image-container {
+    position: relative;
+    overflow: visible;
     height: 100%;
     background: gray;
     box-sizing: content-box;
@@ -80,14 +80,27 @@ $border: 2px solid gray;
     box-sizing: border-box;
     border-left: $border;
     border-right: $border;
-
-    &:hover, &.selected {
+    &:hover,
+    &.selected {
         border-color: $primaryDark;
     }
 }
 
+.full-image {
+    width: 100%;
+    box-sizing: border-box;
+}
 
-.full-image{
-  width: 100%;
-  box-sizing: border-box;
+.delete-button {
+    position: absolute;
+    left: calc("100% - 1em"); // top:0.25em;
+    right: 0;
+    color: red;
+    background: rgba(black, 0.8);
+    &:hover {
+        box-shadow: 1px 1px 5px 1px white;
+    }
+    border-radius: 50%;
+    padding:0;
+    line-height: 1em;
 }
