--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,10 +1,10 @@
-<app-image-list>
+<app-image-list (changeImageList)="changeImageList($event)">
 
 </app-image-list>
 
 <div class="columns">
   <div class="col-mx-auto">
-    <button class="btn btn-primary btn-lg btn-process table"
+    <button type="button" class="btn btn-primary btn-lg btn-process table"
       (click)="processImages()">
       <div class="row-wrapper">
 
