--- a/src/app/shared/components/image-list/image-list.component.html
+++ b/src/app/shared/components/image-list/image-list.component.html
@@ -19,16 +19,17 @@
                 *ngFor="let img of images; let index = index" [class.selected]="index == selectedIndex"
                 (click)="selectIndex(index)">
               <div class="image-container full-height">
-                <div class="delete-button c-hand" (click)="removeImage(index)">
+                <div *ngIf="!displayMode" class="delete-button c-hand" (click)="removeImage(index)">
                   <i class="far fa-2x fa-times-circle"></i>
                 </div>
-                <img [src]="img" class="img-responsive img-fit-contain" alt="">
+                <img [src]="getImg(img)" class="img-responsive img-fit-contain" alt="">
               </div>
             </div>
 
             <div  #miniature [class.selected] = "selectedIndex == -1"
             class="miniature mr-1 ml-1 full-height column col-1 col-xl-2 col-lg-2 col-sm-4"
             (click)="selectIndex(-1)"
+            *ngIf="!displayMode"
             >
               <div class="relative image-container full-height text-center">
                 <div class="relative-center">
@@ -50,5 +51,6 @@
   </div>
 </div>
 
-<img [src]="images[selectedIndex]" [class.hide]="selectedIndex == -1" alt="" class="pr-1 pl-1 img-responsive full-image">
-<app-hover-canvas [class.hide]="selectedIndex !== -1" (selectImages)="addImage($event)"></app-hover-canvas>
+<img *ngIf="!displayMode && selectedIndex !== -1" [src]="getImg(images[selectedIndex])" alt="" class="pr-1 pl-1 img-responsive full-image">
+<app-analyzed-image *ngIf="displayMode && images && images.length > 0" [data]="getData(images[selectedIndex])" [image]="getImg(images[selectedIndex])"></app-analyzed-image>
+<app-hover-canvas  [class.hide]="selectedIndex !== -1" (selectImages)="addImage($event)"></app-hover-canvas>
