added link to main page, made fetching the analyzed data from server work, fixed a bug on positioning of rectangles and scaling of underlying image

--- a/src/app/shared/components/analyzed-image/analyzed-image.component.html
+++ b/src/app/shared/components/analyzed-image/analyzed-image.component.html
@@ -29,5 +29,5 @@
 <!-- <svg width="100%"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <image [attr.href]="image" x="0" y="0" height="auto" width="auto" />
 </svg> -->
-  <img (load)="onImageLoad($event)" #displayedImage [src]="image" class="img-responsive ">
+  <img (load)="onImageLoad($event)" #displayedImage [src]="image" class="col-12">
 </div>
