--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,8 +3,9 @@
     <div class="column no-grow">
       <div class="table">
         <div class="cell-wrapper">
-
-          <img class="img-fit-contain img-fluid" src="../../../../assets/img/gray_book.png" alt="">
+          <a routerLink="/">
+            <img class="img-fit-contain img-fluid" src="../../../../assets/img/gray_book.png" alt="">
+          </a>
         </div>
       </div>
     </div>
