added loader and fetching of data until all images are on the client-side

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 
 </app-image-list>
 
-<div class="columns">
+<div class="columns mt-5 mb-5">
   <div class="col-mx-auto">
     <button type="button" class="btn btn-primary btn-lg btn-process table"
       (click)="processImages()">
