--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="pt-5 pb-5">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
