--- a/src/app/shared/components/analyzed-image/analyzed-image.component.html
+++ b/src/app/shared/components/analyzed-image/analyzed-image.component.html
@@ -4,7 +4,14 @@
 <div class="relative">
   <div class="p-absolute data-layer full-size " *ngIf="sourceHeight && sourceWidth">
     <div class="relative full-size ">
-
+      <div class="footnote-rectangle"
+      *ngIf = "footnote"
+      [style.width.%]="footnote.width"
+      [style.height.%]="footnote.height"
+      [style.top.%]="footnote.top "
+      [style.left.%]="footnote.left"
+      >
+      </div>
       <div class="line-rectangle"
       *ngFor = "let rectangle of lineRectangles"
       [style.width.%]="rectangle.width"
@@ -26,8 +33,6 @@
 
   </div>
 </div>
-<!-- <svg width="100%"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-  <image [attr.href]="image" x="0" y="0" height="auto" width="auto" />
-</svg> -->
+
   <img (load)="onImageLoad($event)" #displayedImage [src]="image" class="col-12">
 </div>
