added error/not-found pages, put share button instead of login, made footer stay at the bottom of the page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<app-header></app-header>
-<div class="pt-5 pb-5">
-  <router-outlet></router-outlet>
+<div class="wrap">
+
+  <app-header></app-header>
+  <div class="pt-5 pb-5 content">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
