--- a/src/app/pages/processed-images-page/processed-images-page.component.html
+++ b/src/app/pages/processed-images-page/processed-images-page.component.html
@@ -11,10 +11,18 @@
 </div>
 
 <ng-template #loader>
-  <h2 class="text-center">
-    Images are being processed, please wait
-  </h2>
-  <div class="columns">
-    <img class="col-mx-auto" src="../../../assets/img/loader.svg">
+  <div class="table full-height">
+    <div class="row-wrapper">
+
+      <div class="cell-wrapper">
+
+        <h2 class="text-center">
+          Images are being processed, please wait
+        </h2>
+        <div class="columns">
+          <img class="col-mx-auto" src="../../../assets/img/loader.svg">
+        </div>
+      </div>
+    </div>
   </div>
 </ng-template>
