--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -23,12 +23,13 @@
       <div class="table">
         <div class="cell-wrapper">
           <div class="popover popover-bottom">
-            <button type='button' class="btn btn-primary right "> Login </button>
+            <button type='button' [class.invisible]="!hasId" class="btn btn-primary right "> Share </button>
             <div class="popover-container">
               <div class="card">
                 <div class="card-body">
-                  <ul class="menu">
-                      <li class="divider" data-content="Login via"></li>                    <li class="menu-item login-entry">
+                  <!-- <ul class="menu">
+                      <li class="divider" data-content="Login via"></li>
+                      <li class="menu-item login-entry">
                       <a href="" class="">
                         <i class="fab fa-facebook-square"></i>
                         Log in with Facebook
@@ -39,6 +40,22 @@
                         <i class="fab fa-google"></i>
                         Log in with Google
                       </a>
+                    </li>
+                  </ul> -->
+                  <ul class="menu">
+                    <li class="divider" data-content="Share or save the url"></li>
+                    <li>
+                      <div class="columns col-gapless">
+                        <div class="column col-2">
+                          <button ngxClipboard [cbContent]="url " type="button" class="btn btn-link btn-lg ">
+                            <i class="fas fa-paste"></i>
+                          </button>
+                        </div>
+                        <div class="column col-10">
+                          <input  class="c-hand" readonly
+                           type="text" class="input-lg" [ngModel] = "(url )">
+                        </div>
+                      </div>
                     </li>
                   </ul>
                 </div>
