--- a/src/app/shared/components/analyzed-image/analyzed-image.component.scss
+++ b/src/app/shared/components/analyzed-image/analyzed-image.component.scss
@@ -42,6 +42,17 @@
 .line-paragraph {
     @extend .line-rectangle;
     background: rgba(orange, 0.2);
-    border: red 4px solid;
-    // box-sizing: content-box;
+    border: red 4px solid; // box-sizing: content-box;
+}
+
+.word-rectangle {
+    @extend .line-rectangle;
+    background: rgba(blue, 0.2);
+    border: none;
+}
+
+.sidenote-rectangle {
+    @extend .line-rectangle;
+    border-color: rgb(0, 245, 0);
+    background: rgba(0, 245, 0, 0.192);
 }
