--- a/src/app/shared/components/image-list/image-list.component.html
+++ b/src/app/shared/components/image-list/image-list.component.html
@@ -22,6 +22,9 @@
                 <div *ngIf="!displayMode" class="delete-button c-hand" (click)="removeImage(index)">
                   <i class="far fa-2x fa-times-circle"></i>
                 </div>
+                <div class="tint">
+
+                </div>
                 <img [src]="getImg(img)" class="img-responsive img-fit-contain" alt="">
               </div>
             </div>
